tests/fsharp/typecheck/sigs/neg_byref_22.bsl

neg_byref_22.fs(3,16,3,20): typecheck error FS3226: A byref pointer returned by a function or method is implicitly dereferenced as of F# 4.5. To acquire the return value as a pointer, use the address-of operator, e.g. '&f(x)' or '&obj.Method(arg1, arg2)'.

neg_byref_22.fs(3,16,3,20): typecheck error FS0001: This expression was expected to have type
    'byref<int>'    
but here has type
    'int'    

neg_byref_22.fs(3,16,3,20): typecheck error FS0001: This expression was expected to have type
    'byref<int>'    
but here has type
    'int'    
